Remove 404 todo, remove some steps from eject script, add some details to readme

--- a/client/index.template.html
+++ b/client/index.template.html
@@ -13,7 +13,7 @@
         <meta name="twitter:card" content="summary_large_image">
         {{{meta.robots}}}
 
-        <meta name="author" content="Brian Whicheloe">
+        <meta name="author" content="">
         <link rel="shortcut icon" href="/icons/favicon.ico" id="favicon">
         <link rel="manifest" href="/manifest.json">
         <meta name="theme-color" content="#4e4e4e" id="theme_color">
