--- a/client/index.template.html
+++ b/client/index.template.html
@@ -7,7 +7,7 @@
         
         {{{meta.description}}}
         <meta property="og:title" content="{{meta.title}}">
-        <meta property="og:description" content="{{meta.description}}">
+        {{{meta.ogDescription}}}
         <!-- <meta property="og:image" content="{{meta.card}}"> -->
         <meta property="og:url" content="{{ fullUrl }}">
         <meta name="twitter:card" content="summary_large_image">
